chore: figuring out that variable substitution thing

--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -103,6 +103,9 @@ jobs:
       - name: Install talosctl
         run: curl -fsSL https://talos.dev/install | sh
 
+      - name: Print Node
+        run: 'echo "Running from node: $NODE"'
+
       - name: Pull Image
         run: talosctl --nodes $NODE image pull ${{ matrix.image }}
 
