feat: Adding system upgrade controller

--- a/talos/patches/controller/machine-features.yaml
+++ b/talos/patches/controller/machine-features.yaml
@@ -8,3 +8,6 @@ machine:
         - "actions-runner-system"
         - "system-upgrade"
     stableHostname: true
+    rbac: true
+    apidCheckExtKeyUsage: true
+    diskQuotaSupport: true
