debug: trying something.. else

--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/vrtx-cluster/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/vrtx-cluster/helmrelease.yaml
@@ -65,8 +65,8 @@ spec:
               - mountPath: /var/run/secrets/talos.dev
                 name: talos
                 readOnly: true
-        serviceAccountName: vrtx-cluster-runner
+        serviceAccountName: &sa-name vrtx-cluster-runner
         volumes:
           - name: talos
             secret:
-              secretName: *name
+              secretName: *sa-name
