chore: Configure renovate bot to merge minor and patch updates automatically

--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -79,11 +79,19 @@
       matchUpdateTypes: ["minor"],
       semanticCommitType: "feat",
       commitMessageExtra: "( {{currentVersion}} → {{newVersion}} )",
+      automerge: true,
+      automergeType: "branch",
+      matchCurrentVersion: "!/^0/",
+      platformAutomerge: true
     },
     {
       matchUpdateTypes: ["patch"],
       semanticCommitType: "fix",
       commitMessageExtra: "( {{currentVersion}} → {{newVersion}} )",
+      automerge: true,
+      automergeType: "branch",
+      matchCurrentVersion: "!/^0/",
+      platformAutomerge: true
     },
     {
       matchUpdateTypes: ["digest"],
