chore: add bjw-s-labs/home-ops as git submodule in .src directory
- Add additional reference repository for implementation patterns

- Provides alternate examples for Kubernetes manifest organization

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".src/onedr0p-home-ops"]
 	path = .src/onedr0p-home-ops
 	url = https://github.com/onedr0p/home-ops
+[submodule ".src/bjw-s-labs-home-ops"]
+	path = .src/bjw-s-labs-home-ops
+	url = https://github.com/bjw-s-labs/home-ops
