chore: configure Renovate to automerge digest updates
- Enable automerge for container digest updates

- Consistency with minor and patch update automerge configuration

--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -97,6 +97,10 @@
       matchUpdateTypes: ["digest"],
       semanticCommitType: "chore",
       commitMessageExtra: "( {{currentDigestShort}} → {{newDigestShort}} )",
+      automerge: true,
+      automergeType: "branch",
+      matchCurrentVersion: "!/^0/",
+      platformAutomerge: true
     },
     {
       matchDatasources: ["docker"],
