fix: substituteFrom is required here

--- a/kubernetes/apps/home-automation/esphome/ks.yaml
+++ b/kubernetes/apps/home-automation/esphome/ks.yaml
@@ -33,3 +33,6 @@ spec:
       APP: *appname
       VOLSYNC_CLAIM: esphome-config
       VOLSYNC_CAPACITY: 5Gi
+    substituteFrom:
+      - kind: Secret
+        name: cluster-secrets
