--- a/kubernetes/apps/home-automation/esphome/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/externalsecret.yaml
@@ -23,7 +23,7 @@ spec:
           mqtt_user: "{{ .emqx_user_mqtt_username }}"
           mqtt_pwd: "{{ .emqx_user_mqtt_password }}"
 
-          domain_devices: k8s.${SECRET_DOMAIN}
+          domain_devices: iot.internal
   dataFrom:
     - extract:
         key: esphome
