--- a/kubernetes/apps/home-automation/esphome/ks.yaml
+++ b/kubernetes/apps/home-automation/esphome/ks.yaml
@@ -22,7 +22,7 @@ spec:
   dependsOn:
     - name: multus-networks
       namespace: network
-    - name: onepassword-connect-store
+    - name: onepassword-connect
       namespace: external-secrets
     - name: volsync
       namespace: volsync-system
