--- a/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -90,7 +90,7 @@ spec:
 
     persistence:
       config:
-        existingClaim: home-assistant-config
+        existingClaim: home-assistant
         advancedMounts:
           home-assistant:
             app:
