fix: Using wrong pvc name

--- a/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
@@ -92,7 +92,7 @@ spec:
 
     persistence:
       config:
-        existingClaim: esphome-config
+        existingClaim: esphome
         advancedMounts:
           esphome:
             app:
