--- a/kubernetes/apps/home-automation/esphome/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/externalsecret.yaml
@@ -20,8 +20,8 @@ spec:
           wifi_fallback_ssid_password: "{{ .esphome_wifi_fallback_ssid_password }}"
 
           mqtt_host: emqx-listeners.iot.svc.cluster.local
-          mqtt_user: "{{ .emqx_user_mqtt_username }}"
-          mqtt_pwd: "{{ .emqx_user_mqtt_password }}"
+          mqtt_user: "{{ .esphome_mqtt_username }}"
+          mqtt_pwd: "{{ .esphome_mqtt_password }}"
 
           domain_devices: iot.internal
   dataFrom:
@@ -31,12 +31,6 @@ spec:
         - regexp:
             source: "(.*)"
             target: "esphome_$1"
-    - extract:
-        key: emqx
-      rewrite:
-        - regexp:
-            source: "(.*)"
-            target: "emqx_$1"
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/external-secrets.io/externalsecret_v1.json
 apiVersion: external-secrets.io/v1
