feat: Add mmWave Presence configurator to home-automation

--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./esphome/ks.yaml
   # - ./go2rtc/ks.yaml
   - ./home-assistant/ks.yaml
+  - ./mmwave-configurator/ks.yaml
   # - ./scrypted/ks.yaml
   # - ./zigbee2mqtt/ks.yaml
 components:
