--- a/kubernetes/apps/home-automation/mmwave-configurator/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/mmwave-configurator/app/helmrelease.yaml
@@ -20,11 +20,7 @@ spec:
           secret.reloader.stakater.com/reload: mmwave-configurator-secrets
 
         pod:
-          securityContext:
-            runAsUser: 2000
-            runAsGroup: 2000
-            fsGroup: 2000
-            fsGroupChangePolicy: OnRootMismatch
+          # securityContext removed to allow s6-overlay to function properly
 
         containers:
           app:
@@ -34,10 +30,6 @@ spec:
             env:
               - name: HA_URL
                 value: "home-assistant.home-automation.svc.cluster.local:8123"
-              - name: PUID
-                value: "2000"
-              - name: PGID
-                value: "2000"
             envFrom:
               - secretRef:
                   name: mmwave-configurator-secrets
@@ -54,12 +46,7 @@ spec:
                 memory: 128Mi
               limits:
                 memory: 256Mi
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: false
-              capabilities:
-                drop:
-                  - ALL
+            # securityContext removed to allow s6-overlay to function properly
 
     service:
       main:
